MINOR: Various Java cleanups in core